<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cozmo_driver_ros2</name>
  <version>0.0.1</version>
  <description>
    Unofficial ROS2 node for Anki Cozmo.
  </description>
  <maintainer email="furqan.habibi1@gmail.com">Muhammad Furqan Habibi</maintainer>
  <license>Apache License 2.0</license>

  <author email="furqan.habibi1@gmail.com">Muhammad Furqan Habibi</author>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>